--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "iojs": ">= 3.0",
     "npm": ">= 2.1"
   },
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
     "babel": "5.8.23",
     "react": "0.14.0-beta3",
@@ -13,7 +16,5 @@
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "webpack": "^1.12.0"
-  },
-  "scripts": {
   }
 }
