--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "version": "0.0.1",
   "engines": {
     "node": ">= 0.12",
-    "iojs": ">= 3.0",
     "npm": ">= 2.1"
   },
   "scripts": {
     "build": "gulp build --p",
     "dev": "gulp"
   },
-  "repository": "git://github.com/uooo/webpack-echarts-starter-kit",
+  "repository": "git://github.com/luqin/echarts-webpack-starter-kit",
   "dependencies": {
     "babel": "5.8.23",
     "normalize.css": "^3.0.2",
     "react": "0.14.0-beta3",
     "react-dom": "0.14.0-beta3",
-    "react-router": "^1.0.0-beta4",
-    "echarts": "2.2.7-amd-beta2"
+    "react-router": "1.0.0-beta4",
+    "echarts": "2.2.8"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
