--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "gulp build --p",
-    "dev": "gulp"
+    "start": "gulp"
   },
   "repository": "git://github.com/luqin/echarts-webpack-starter-kit",
   "dependencies": {
