--- a/package.json
+++ b/package.json
@@ -12,60 +12,29 @@
   },
   "repository": "git://github.com/luqin/echarts-webpack-starter-kit",
   "dependencies": {
-    "babel": "5.8.23",
-    "normalize.css": "^3.0.2",
-    "react": "0.14.0-beta3",
-    "react-dom": "0.14.0-beta3",
-    "react-router": "1.0.0-beta4",
-    "echarts": "3.0.0-beta2"
+    "react": "0.14.6",
+    "react-dom": "0.14.6",
+    "react-router": "2.0.0-rc5",
+    "echarts": "3.0.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^2.0.0",
+    "babel": "5.8.23",
     "babel-core": "^5.0.23",
     "babel-eslint": "^4.1.1",
     "babel-loader": "^5.3.2",
-    "bluebird": "^2.9.9",
-    "body-parser": "^1.12.4",
-    "classnames": "^2.1.1",
-    "compression": "^1.4.0",
     "css-loader": "^0.17.0",
     "eslint": "^1.0.0",
     "eslint-plugin-react": "^3.0.0",
-    "eventemitter3": "^1.0.1",
-    "express": "^4.11.2",
     "extract-text-webpack-plugin": "^0.8.0",
     "file-loader": "^0.8.1",
-    "glob": "^5.0.13",
     "gulp": "^3.8.10",
-    "gulp-bg": "0.0.7",
     "gulp-eslint": "^1.0.0",
     "gulp-util": "^3.0.2",
-    "hash-file": "^2.1.0",
-    "intl": "^1.0.0",
-    "intl-locales-supported": "^1.0.0",
-    "intl-messageformat": "^1.1.0",
-    "intl-relativeformat": "^1.1.0",
-    "invariant": "^2.1.0",
-    "isomorphic-fetch": "^2.1.1",
-    "less": "^2.5.1",
-    "less-loader": "^2.0.0",
-    "nconf": "^0.7.1",
-    "node-notifier": "^4.1.0",
-    "node-sass": "^3.2.0",
-    "nyan-progress-webpack-plugin": "^1.1.0",
-    "react-document-title": "^2.0.0",
+    "webpack-plugin-notifier": "0.1.0",
     "react-hot-loader": "^1.3.0",
-    "react-intl": "^1.1.0",
-    "react-pure-render": "^1.0.1",
-    "react-textarea-autosize": "^2.3.1",
     "run-sequence": "^1.0.2",
-    "sass-loader": "^2.0.1",
-    "serve-favicon": "^2.2.0",
     "style-loader": "^0.12.0",
-    "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
-    "useragent": "^2.1.7",
-    "validator": "^4.0.0",
     "webpack": "^1.9.5",
     "webpack-dev-server": "^1.7.0",
     "yargs": "^3.3.1"
